# CoreAR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  params.json
CoreAR/: ar.h  chaincode.h  code.c  code.h  common.h  corner.c  corner.h  denoiseWithContractionAndExpansion.c
CoreAR/chaincodeTest/: main.c
CoreAR/cornerDetectionTest/: main.c
CoreAR/gl/: glteapot.h
c/: chaincode.c  chaincode.h  code.c  code.h  codeImageTemplate.c  codeImageTemplate.h  common.c  corner.c  denoiseWithContractionAndExpansion.h  prepro.h
c++/: CRChainCode.cpp  CRChainCode.h  CRChainCodeBlob.cpp  CRChainCodeBlob.h  CRChainCodeElement.cpp  CRChainCodeElement.h  CRCode.cpp  CRCode.h  CRCommon.h  CRHomogeneousVec3.cpp  CRHomogeneousVec3.h  CRLevenbergMarquardt.cpp  CRLevenbergMarquardt.h  CRMatrix.cpp  CRMatrix.h  CRRodrigues.cpp  CRRodrigues.h  CRTest.cpp  CRTest.h  CoreAR.h
c++/UnitTest/: Makefile  chaincode.cpp  codeCropping.cpp  codeCropping.h  corner.cpp  euler.cpp  euler.h  levenbergMarquardt.cpp  main.cpp  rodrigues.h  test.h
c++/test/: CRTest.cpp  CRTest.h  test.pch
c/chaincodeTest/: chaincodeTest.1  main.c
c/cornerDetectionTest/: cornerDetectionTest.1
darwin/: main.m
ios/: AR-Info.plist  main.m
matlab/: chaincode.m  code_detect.m  code_estimation.m  corner_detection.m  extract_code.m  getRTMatrix.m  hough.m  locate_code.m  p_estimation.m  pose_estimation.m  project.m  rodrigues2Rotation.m  rotation2Rodrigues.m  simulation.m  simulation_lvm.m
resource/: artoolkit_codes.ai
src/: CMakeLists.txt  CoreAR.cpp
test/: CMakeLists.txt  main.cpp  test.cpp
(+374 files in other folders)
